--- a/src/main/resources/Invoice_page3.jrxml
+++ b/src/main/resources/Invoice_page3.jrxml
@@ -13,8 +13,8 @@
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<parameter name="parameterId" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="accountId" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="billrun" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="accountId" class="java.lang.String"/>
+	<parameter name="billrun" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[WITH unique_data AS (
 SELECT DISTINCT
@@ -77,8 +77,10 @@ FROM unique_data;]]>
 			<band height="55">
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<frame>
-					<reportElement mode="Opaque" x="3" y="0" width="559" height="25" backcolor="#E6E6E6" uuid="e132dbc3-74e7-46b9-af0a-3753b17e6ecd">
+					<reportElement mode="Opaque" x="0" y="10" width="559" height="25" backcolor="#E6E6E6" uuid="e132dbc3-74e7-46b9-af0a-3753b17e6ecd">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+						<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					</reportElement>
 					<textField>
 						<reportElement x="391" y="0" width="168" height="19" uuid="c43687ba-f7f7-422e-9f7f-76396296b61c">
@@ -176,7 +178,7 @@ FROM unique_data;]]>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Your Details Charges]]></text>
+				<text><![CDATA[Details of Charges]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="1" y="3" width="190" height="18" uuid="efae20ac-3017-458f-a0d3-ef4991a27ba1"/>
@@ -269,7 +271,7 @@ FROM unique_data;]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="100">
+		<band height="70">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
 				<reportElement mode="Opaque" x="1" y="0" width="129" height="20" backcolor="#E6E6E6" uuid="8c782c77-b1c1-4fba-bbf2-dc160419281a">
@@ -308,17 +310,16 @@ FROM unique_data;]]>
 				<textFieldExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{period_start}) + " - " + new SimpleDateFormat("dd/MM/yyyy").format($F{period_end})]]></textFieldExpression>
 			</textField>
 			<frame>
-				<reportElement x="0" y="20" width="565" height="50" uuid="23b63f94-1886-4f4b-8c2a-fe7d9eb59358">
+				<reportElement x="0" y="20" width="565" height="40" uuid="23b63f94-1886-4f4b-8c2a-fe7d9eb59358">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.0" lineStyle="Dashed" lineColor="#38C3F5"/>
 				</box>
 				<subreport>
-					<reportElement x="3" y="1" width="559" height="45" uuid="8bcc85c8-04ea-4a5e-b3f7-7a70adb9eb40">
+					<reportElement x="3" y="1" width="559" height="25" uuid="8bcc85c8-04ea-4a5e-b3f7-7a70adb9eb40">
 						<property name="com.jaspersoft.studio.unit.width" value="px"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
@@ -329,9 +330,10 @@ FROM unique_data;]]>
 					<subreportExpression><![CDATA["sub_page3.jasper"]]></subreportExpression>
 				</subreport>
 				<frame>
-					<reportElement positionType="Float" mode="Opaque" x="2" y="51" width="562" height="25" backcolor="#E6E6E6" uuid="16ed09cc-3ee3-4611-a5aa-99b41f86000e">
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<reportElement positionType="Float" mode="Opaque" x="0" y="30" width="562" height="25" backcolor="#E6E6E6" uuid="16ed09cc-3ee3-4611-a5aa-99b41f86000e">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+						<property name="com.jaspersoft.studio.unit.x" value="px"/>
+						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<box>
 						<pen lineWidth="0.0" lineStyle="Dashed" lineColor="#38C3F5"/>
@@ -349,7 +351,7 @@ FROM unique_data;]]>
 							<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="49539081-ec52-426b-8f1c-7528c229c281"/>
 							<property name="com.jaspersoft.studio.unit.x" value="px"/>
 						</reportElement>
-						<textFieldExpression><![CDATA["Total Charges"]]></textFieldExpression>
+						<textFieldExpression><![CDATA["Sub Total"]]></textFieldExpression>
 					</textField>
 				</frame>
 			</frame>
